Fixed bug #72922 COM called from PHP does not return out parameters